--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "next": "^7.0.2",
+    "next-images": "^1.0.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
