--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "deploy": "git subtree push --prefix out origin gh-pages",
     "export": "next export",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
