--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next",
     "build": "next build",
     "deploy": "git subtree push --prefix out origin gh-pages",
-    "export": "next export",
+    "export": "next build && next export",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
