Explicit out dir.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next",
     "build": "next build",
     "deploy-gh": "NODE_ENV=github-pages next build && NODE_ENV=github-pages next export -o out-gh && git add out-gh && git commit -m \"Deploy GitHub pages content.\" && git subtree push --prefix out-gh origin gh-pages",
-    "export": "next build && next export",
+    "export": "next build && next export -o out",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
