--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "deploy-gh": "NODE_ENV=github-pages next build && NODE_ENV=github-pages next export -o out-gh && git add out-gh && git commit -m \"Deploy GitHub pages content.\" && git subtree push --prefix out-gh origin gh-pages",
-    "export": "next build && next export -o out",
+    "deploy-gh": "rm -rf .next-gh && NODE_ENV=github-pages next build && NODE_ENV=github-pages next export -o out-gh && git add out-gh && git commit -m \"Deploy GitHub pages content.\" && git subtree push --prefix out-gh origin gh-pages",
+    "export": "rm -rf .next && next build && next export -o out",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
