--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "gatsby": "^2.8.5",
+    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-typography": "^2.2.13",
     "node-sass": "^4.12.0",
