--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "gatsby": "^2.8.5",
