--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "typography-theme-fairy-gates": "^0.16.19"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@storybook/addon-actions": "^5.1.1",
+    "@storybook/addon-links": "^5.1.1",
+    "@storybook/addons": "^5.1.1",
+    "@storybook/react": "^5.1.1",
+    "babel-loader": "^8.0.6",
     "prettier": "^1.17.1"
   },
   "repository": {
