--- a/package.json
+++ b/package.json
@@ -18,17 +18,13 @@
   "dependencies": {
     "gatsby": "^2.8.5",
     "gatsby-plugin-gtag": "^1.0.11",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "typography": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19"
+    "react-typography": "^0.16.19"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
