--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
+    "dev": "yarn develop",
     "develop": "gatsby develop",
     "export": "gatsby build && cp -r public out",
     "format": "prettier --write src/**/*.{js,jsx}",
@@ -19,6 +20,7 @@
     "gatsby": "^2.8.5",
     "gatsby-plugin-gtag": "^1.0.11",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-sass": "^2.0.11",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
