--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-gtag": "^1.0.11",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-transformer-typescript-css-modules": "^1.0.14",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
