--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@marvelapp/react-ab-test": "^2.2.0",
     "gatsby": "^2.8.5",
     "gatsby-plugin-gtag": "^1.0.11",
     "gatsby-plugin-react-helmet": "^3.0.12",
