--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@marvelapp/react-ab-test": "^2.2.0",
     "gatsby": "^2.8.5",
-    "gatsby-plugin-gtag": "^1.0.11",
+    "gatsby-plugin-google-gtag": "^1.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-sass": "^2.0.11",
