--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "test": "jest",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -35,6 +35,7 @@
     "@storybook/addons": "^5.1.1",
     "@storybook/react": "^5.1.1",
     "babel-loader": "^8.0.6",
+    "jest": "^24.9.0",
     "prettier": "^1.17.1"
   },
   "repository": {
