--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,9 +22,14 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: yarn install, test, and build
+      - name: Install dependencies
         run: |
           yarn
+      - name: Run tests
+        run: |
           yarn test
+      - name: Build
+        run: |
+          yarn build
         env:
           CI: true
