--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "gatsby": "^2.8.5",
     "gatsby-plugin-google-gtag": "^1.1.9",
+    "gatsby-plugin-manifest": "^2.2.18",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-sass": "^2.0.11",
