--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-remark-prismjs": "^3.4.4",
     "gatsby-source-filesystem": "^2.2.4",
     "gatsby-transformer-remark": "^2.7.3",
     "node-sass": "^4.12.0",
+    "prismjs": "^1.20.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
