--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@chakra-ui/core": "^0.7.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@mdx-js/mdx": "^1.5.8",
+    "@mdx-js/react": "^1.5.8",
     "emotion-theming": "^10.0.27",
     "gatsby": "^2.8.5",
     "gatsby-plugin-google-gtag": "^1.1.9",
     "gatsby-plugin-manifest": "^2.2.18",
+    "gatsby-plugin-mdx": "^1.1.10",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
