--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mdx-js/react": "^1.5.8",
     "emotion-theming": "^10.0.27",
     "gatsby": "^2.8.5",
+    "gatsby-image": "^2.3.5",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-gtag": "^1.1.9",
     "gatsby-plugin-manifest": "^2.2.18",
@@ -32,9 +33,11 @@
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sharp": "^2.5.6",
     "gatsby-remark-prismjs": "^3.4.4",
     "gatsby-source-filesystem": "^2.2.4",
     "gatsby-transformer-remark": "^2.7.3",
+    "gatsby-transformer-sharp": "^2.4.6",
     "node-sass": "^4.12.0",
     "prismjs": "^1.20.0",
     "react": "^16.8.6",
