Finish the Python article.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "develop": "gatsby develop",
     "export": "gatsby build && cp -r public out",
     "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "develop",
+    "start": "yarn develop",
     "serve": "gatsby serve",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
