--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@chakra-ui/core": "^0.7.0",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
+    "@chakra-ui/react": "^1.1.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "@mdx-js/mdx": "^1.5.8",
     "@mdx-js/react": "^1.5.8",
-    "emotion-theming": "^10.0.27",
+    "framer-motion": "^3.1.1",
     "gatsby": "^2.8.5",
     "gatsby-image": "^2.3.5",
     "gatsby-plugin-google-fonts": "^1.0.1",
