--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-icons": "^4.1.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-typography": "^0.16.19"
   },
